sending up my code COVID map is not styled yet but link is on the html page

--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,9 @@ max-height: none;
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+#scroll{
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
