--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,17 @@ max-height: none;
     overflow-x: hidden;
 }
 
+/* Brooks Styling -------------------------*/
 .covid {
     height: 800px;
 }
+
+#city-details li {
+}
+
+#city-details span {
+    padding: 3px;
+    border-radius: 3px;
+}
+
 
